Fix session restore on ChromeOS

SessionRestore on Chrome OS in a non-OWNER profile and with any flag
enabled doesn't work correctly after logout/login.
This was caused by the change to allow saving a session file
without commands. (https://crrev.com/c/899249)
This CL reverts the problematic parts and fixes session restore.

Bug: 816586
Change-Id: I4a5050c532143c4fa9990e153952a82b72e3385f
Reviewed-on: https://chromium-review.googlesource.com/978214
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546071}
Former-commit-id: bd6d95223165080a5c21884c41afa265c8a873b4